Remove Big Beef Tracker and Classic Clips

--- a/lib/pick_em_web/templates/layout/live.html.heex
+++ b/lib/pick_em_web/templates/layout/live.html.heex
@@ -2,7 +2,7 @@
   <%= if @page != "matchup-hero" do %>
     <div class="max-w-2xl mx-auto pt-10 pb-20">
       <div class="w-max mx-auto">
-        <h1 class="text-white text-center font-open-sans font-extrabold italic text-nd-pink text-9xl mb-0">
+        <h1 class="text-center font-open-sans font-extrabold italic text-nd-pink text-9xl mb-0">
           PICK &apos;EM
         </h1>
         <div class="h-10 w-13/12 md:w-27/24 bg-nd-yellow -mt-12"></div>
