--- a/lib/pick_em_web/live/pick_em/leaders.html.heex
+++ b/lib/pick_em_web/live/pick_em/leaders.html.heex
@@ -41,14 +41,15 @@
       </p>
       <div class="flex flex-row gap-4 flex-wrap">
         <%= for month <- months do %>
-          <%= live_patch(String.capitalize(month),
-            to:
-              Routes.pick_em_leaders_path(@socket, :leaders,
+          <.link
+            patch={Routes.pick_em_leaders_path(@socket, :leaders,
                 month: month,
                 season: season.year_end
-              ),
-            class: "ml-2 text-white font-open-sans font-light underline"
-          ) %>
+              )}
+            class="ml-2 text-white font-open-sans font-light underline"
+          >
+            <%= String.capitalize(month) %>
+          </.link>
         <% end %>
       </div>
     <% end %>
