--- a/lib/pick_em_web/templates/layout/live.html.heex
+++ b/lib/pick_em_web/templates/layout/live.html.heex
@@ -7,7 +7,7 @@
         </h1>
         <div class="h-10 w-13/12 md:w-27/24 bg-nd-yellow -mt-12"></div>
       </div>
-      <PickEmWeb.PickEmLive.NavComponent.render id="nav-component" active={@page} user={@user} />
+      <.live_component module={PickEmWeb.PickEmLive.NavComponent} id="nav-component" active={@page} user={@user} />
       <%= unless is_nil(@theme) do %>
         <%= @inner_content %>
       <% end %>
@@ -15,7 +15,8 @@
   <% else %>
     <%= @inner_content %>
   <% end %>
-  <PickEmWeb.PickEmLive.NotificationComponent.render
+  <.live_component
+    module={PickEmWeb.PickEmLive.NotificationComponent}
     id="notification"
     message={assigns[:notification_message]}
     type={assigns[:notification_type]}
