Fix more deprecation warnings

--- a/lib/pick_em_web/live/pick_em/secaucus.html.heex
+++ b/lib/pick_em_web/live/pick_em/secaucus.html.heex
@@ -136,7 +136,7 @@
               field={@matchup_form[:game_line]}
               type="text"
               placeholder="-7.5"
-              class="my-0 text-white !w-28"
+              class="my-0 text-white !w-28 mb-0"
               value={game_line_value(@selected_game_line, @current_matchup)}
               label={nil}
             />
