--- a/lib/pick_em_web/live/pick_em/profile.html.heex
+++ b/lib/pick_em_web/live/pick_em/profile.html.heex
@@ -57,21 +57,21 @@
       <div class="ml-10 md:ml-20 flex flex-col gap-4">
         <div class="flex flex-row gap-4">
           <p class="font-open-sans text-white text-3xl font-bold my-0">
-            <%= get_matchup_date(pick) %>
+            {get_matchup_date(pick)}
           </p>
           <p class="font-open-sans text-nd-pink text-3xl font-bold my-0">
-            [ <%= get_matchup_outcome(pick) %> ]
+            [ {get_matchup_outcome(pick)} ]
           </p>
           <div class="flex flex-row gap-3">
             <p class="font-open-sans text-white text-3xl font-bold my-0">
               PICKED:
             </p>
             <%= if is_nil(pick.forfeited_at) do %>
-              <%= render_team_abbreviation(
+              {render_team_abbreviation(
                 pick.picked_team,
                 @theme,
                 "text-nd-yellow font-open-sans font-bold text-3xl"
-              ) %>
+              )}
             <% else %>
               <p class="text-nd-yellow font-open-sans font-bold text-3xl my-0">
                 N/A
@@ -83,22 +83,22 @@
           <p class="text-white font-open-sans text-2xl font-bold opacity-80 my-0">
             LINE:
           </p>
-          <%= render_team_abbreviation(
+          {render_team_abbreviation(
             pick.matchup.away_team,
             @theme,
             "text-2xl text-white font-open-sans font-bold my-0"
-          ) %>
+          )}
           <p class="text-2xl text-white font-open-sans font-bold my-0">
             @
           </p>
-          <%= render_team_abbreviation(
+          {render_team_abbreviation(
             pick.matchup.home_team,
             @theme,
             "text-2xl text-white font-open-sans font-bold my-0"
-          ) %>
+          )}
           <p class="text-2xl text-white font-open-sans font-bold my-0">
-            ( <%= pick.matchup.favorite_team.abbreviation %>
-            <%= pick.matchup.spread %> )
+            ( {pick.matchup.favorite_team.abbreviation}
+            {pick.matchup.spread} )
           </p>
         </div>
         <%= if pick.matchup.winning_team_id do %>
@@ -106,16 +106,16 @@
             <p class="text-white font-open-sans text-2xl font-bold opacity-80 my-0">
               RESULT:
             </p>
-            <%= render_team_location(
+            {render_team_location(
               pick.matchup.winning_team,
               @theme,
               "text-2xl text-white font-open-sans font-bold my-0 uppercase"
-            ) %>
+            )}
             <p class="text-white font-open-sans text-2xl font-bold my-0">
               WINS
             </p>
             <p class="text-white font-open-sans text-2xl font-bold my-0">
-              <%= pick.matchup.score %>
+              {pick.matchup.score}
             </p>
           </div>
         <% end %>
