Fix asset deployment and enable ndc picks

--- a/lib/pick_em_web/live/pick_em/secaucus.html.heex
+++ b/lib/pick_em_web/live/pick_em/secaucus.html.heex
@@ -94,7 +94,7 @@
               and No Dunks Crew Picks
             <% end %>
           </p>
-          <div class="flex flex-row my-4 gap-x-4">
+          <div class="flex flex-row mt-4 mb-8 gap-x-4">
             <p class="text-white w-24 my-0">
               Favorite
             </p>
